Fixes: #7219 Implementing FileInputOverlay. Turns most any button into a file uploader. Most of the work involved with this was CSS based - getting the actual file-input to float directly over a button with various styling possibilities and to get it to work in IE, FF and Safari. Credit is due to the other widget authors  - especially the work done with dojo.io.iframe. There's only slight code overlap.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@14466 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/form/resources/FileInput.css
+++ b/form/resources/FileInput.css
@@ -9,6 +9,7 @@
 	z-index:2;
 	opacity:0;
 	filter:alpha(opacity:0);
+	cursor:pointer;
 }
 .dijitFileInputRealBlind {
 	right:0;
